--- a/Section_6_Beamer_Presentation.Rmd
+++ b/Section_6_Beamer_Presentation.Rmd
@@ -10,24 +10,148 @@ output:
 ## Assigning Different Roles
 
 - Explanation of the concept of roles in economic games.
-- Steps to assign roles to players in oTree.
-- Code snippets to demonstrate role assignment.
-- How to conditionally show pages based on roles.
+- Common roles: Investor, Allocator, Buyer, Seller, etc.
+
+#### Ultimatum game:
+ - Player making offer: `first_mover`
+ - Player accepting or rejecting: `second_mover`
+
+---
+
+## Steps to Assign Roles
+
+#### Dictator game:
+ - Player deciding over the distribution: `dictator`
+ - Passive receiver: `recipient``
+
+
+
+1. Define roles in `models.py` within a group class.
+
+    ```python
+    class C(BaseConstants):
+
+        DICTATOR_ROLE = 'Dictator'
+        RECIPIENT_ROLE = 'Recipient'
+    ```
+
+---
+
+### Demonstrate Role Assignment
+
+- Conditional role assignment based on round or other factors.
+
+    ```python
+      class Player(BasePlayer):
+        def role(self):
+          if self.round_number % 2 == 0:
+              return 'dictator'
+          else:
+              return 'recipient'
+    ```
+
+---
+
+### Conditionally Show Pages
+
+- Show or skip pages based on roles.
+
+    ```python
+    class MyPage(Page):
+        @staticmethod
+        def is_displayed(player):
+            return player.role == 'Investor'
+    ```
 
 ## Multi-Round Games
 
-- Introduction to the idea of repeated games or rounds.
-- Steps to configure oTree for multiple rounds.
-- Code examples for implementing multi-round logic.
-- Tips on how to manage and reset variables between rounds.
+### Introduction to Multi-Round Games
 
-## Information Sharing
+- Concept of repeated games in economic experiments.
+- Importance of multi-round structure for various research questions.
 
-- Overview of information sharing in the context of group experiments.
-- Methods for passing information between different members of a group.
-    - Using group-level variables.
-    - Using player-level variables.
-- Methods for sharing information between different apps within a single study.
-    - Using session-level variables.
-    - Code examples for sharing data between apps.
+### Configuring oTree for Multiple Rounds
+
+- Use of `C.NUM_ROUNDS` to specify the number of rounds.
+- `player.in_rounds(1, 3)` and `group.in_rounds(1, 3)` for data across rounds.
+
+```python
+class C(BaseConstants):
+    NUM_ROUNDS = 5
+```
+
+
+## Implementing Multi-Round Logic
+\scriptsize
+
+
+
+#### Retrieving Data from Other Rounds
+
+- Use `player.in_round(x)` to get data from a specific round.
+
+  ```python
+  previous_round_player = self.player.in_round(self.round_number - 1)
+  ```
+
+- Use `player.in_all_rounds()` to get data from all rounds.
+
+  ```python
+  total_contributions = sum([p.contribution for p in self.player.in_all_rounds()])
+  ```
+
+
+ 
+
+ 
+
+## Methods for Passing Information: Within Group
+
+#### Useful functions for sharing information within a group:
+
+- `get_others_in_group`: 
+  ```python
+  other_players = player.get_others_in_group()
+  ```
+  Returns a list of other players in the same group.
+
+- `get_players`: 
+  ```python
+  all_players = group.get_players()
+  ```
+  Returns a list of all players in the group.
+
+- `get_player_by_id`: 
+  ```python
+  specific_player = group.get_player_by_id(1)
+  ```
+  Returns a player object with the specified ID within the group.
+
+- `get_player_by_role`: 
+  ```python
+  specific_player = group.get_player_by_role('RoleName')
+  ```
+  Returns a player object with the specified role within the group.
+
+---
+
+
+### Methods for Passing Information: Across Apps
+
+- `player.participant.vars` and `session.vars` are dictionaries:
+  - Storing data that persists across different apps for a single participant or all participants.
+  - Can be dumped into a model field using `json.dumps()` if needed.
+  
+- Accessing variables:
+  - `player.participant.vars['some_variable'] = value`
+  - `self.session.vars['some_variable'] = value`
+  
+- Safe variable checking:
+  ```python
+  player.participant.vars.get('some_variable')
+  ```
+  
+- Using `session.config` and `session.vars` directly in templates:
+  - Useful for managing between-session treatments.
+
 
